# Linka

./: .gitattributes  .gitignore  README.md  flood  flood.cpp  flood.py  linka-release.keystore  makefile  requirements.txt
.github/workflows/: deploy-pages.yml
LinkaLite/: gradle.properties  settings.gradle.kts
LinkaLite/app/: build.gradle.kts
SDKs/linkaBotsSdk/: README.md  linkaBotsSdk.py  pyproject.toml  test.py
SDKs/linkaBotsSdk/src/: __init__.py  linkaBotsSdk.py
SDKs/linkaFederations/: linkaFederations.py  pyproject.toml  teste.py
SDKs/linkaFederations/src/: __init__.py
SDKs/linkafederations/: README.md  pyproject.toml
SDKs/linkafederations/src/: __init__.py  linkaFederations.py
backend/: algoritimo.py  chat.py  chat_global.py  chat_group.py  community.py  federation_index.py  federations.py  friends.py  github-auth.py  github_auth.py  images.py  linkaFederations.py  linkaGate.py  login.py  main.py  main_teste.py  meta.py  notifications.py  post-engine.py  post.py  profiles.py  reports.py  search.py  security.py  server_manager.py  sincronizer.py  status.py  teste_flood.py  themeInterpreter.py  themes.py
cross-plataform/: .gitattributes  Makefile  android-linka-deployment-settings.json  build-menu.sh  build.sh  config-login.cfg  config.cpp  config.h  e-tome-erro.txt  global.h  linka  linka-release-key.jks  linka.pro  linka1.0.cpp  linka_old.pro  login  login.cpp  login.h  main.cpp  menu  menu.cpp  menu.h  menuQt48.cpp  qrc_resources.cpp  resources.qrc  teste.json  teste.qss  translator.cpp  translator.h
docs/: .qmake.stash  Linka.js  Linka.wasm  doc-style.css  index.html  linka-main.html  linka.html  options.html  qrc_resources.cpp  script.js  searchPage.html  style.css
frontend-client/: QTools.py  Server_manager.py  Translator.py  config-login.cfg  login-aero.py  login.py  main.py  menu.py  pior-tema.qss  texto_pra_so_mais_um _commit.txt  theme.qss
linka_utils/: README.md  setup.py
lite-version/: index.html  login.html  login.js  main-page.js
server-plugin/: plugin.py  server.json
sites/: intermediare.html
templates/: index.html  style.css
(+1686 files in other folders)
