[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkaFederations"
version = "0.1.0"
authors = [
    { name="Luiz Gustavo", email="luizsgustavo76@gmail.com" },
]
description = "linkaFederations is a linka-lib for manage in a easy way the federations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[tool.hatch.build.targets.wheel]
packages = ["src/linkaFederations"]
