[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkaFederations"
version = "0.1.1"  # Atualizado para você subir uma nova versão no PyPI
authors = [
    { name="Luiz Gustavo", email="luizsgustavo76@gmail.com" },
]
description = "linkaFederations is a linka-lib for manage in a easy way the federations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",    # Se a sua lib usa o requests para disparar os JSONs, coloque aqui!
]

[tool.hatch.build.targets.wheel]
packages = ["src/linkafederations"]  # Aponta exatamente para a pasta dentro de src
